<resources>
    <string name="app_name">GameTime</string>
    <string name="text_favorites">Favorites</string>
    <string name="text_standing">Standings</string>
    <string name="text_music">Music</string>
    <!--<string name="stattleship_api_token">8122c5557af509eee31456ccea8993b9</string>-->
    <string name="stattleship_api_token">52e58048e542f3558376c42a6b6cfc5d</string>
    <string name="cardview_contents">This is a CardView widget. CardView widgets can have
        shadows and rounded corners.
        \n\nTo create a card with a shadow, use the <font fgcolor="#FFFFFFFF">android:elevation</font>
        attribute.
        \n\nTo set the corner radius in your layouts, use the <font fgcolor="#FFFFFFFF">card_view:cardCornerRadius</font> attribute.
    </string>
    <string name="team_logo">Team Logo</string>
    <string name="previous_day">Previous Day</string>
    <string name="next_day">Next Day</string>
    <string name="text_games">Games</string>
    <string name="date_header">%1$s &lt;b>%2$d games&lt;/b></string>
    <string name="live_score">Quarter: %2$s\n&lt;b>%1$s&lt;/b>&lt;br/>Live</string>
    <string name="final_score">&lt;b>%1$s&lt;/b>&lt;br/>%2$s</string>
    <string name="title_activity_team">TeamActivity</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="action_settings">Settings</string>
    <string name="playerHeadShotUrl">https://nba-players.herokuapp.com/players/%2$s/%1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="players">Players</string>
    <string name="teams">Teams</string>
    <string name="add_to_favorites">Add to favorites</string>

</resources>
